--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "nodemailer": "^6.2.1"
   }
 }
